# rots_algorithm

./: CMakeLists.txt  checker.c  checker.h  colors.h  cube.c  cube.h  cubeset.c  cubeset.h  dead_ends_finding.c  dead_ends_finding.h  export.c  export.h  io.c  io.h  main.c  rot_operations.c  rot_operations.h  rots_algorithm.c  rots_algorithm.h  rots_operations.c  rots_operations.h  set.c  set.h  test1.txt  utils.c  utils.h
tests/: generated_test.txt  generated_test_big.txt  rots.txt  test2.txt  test2_5.txt  test3.txt  test4.txt  test5.txt
